# aigenflow

./: .env.example  .gitignore  CHANGELOG.md  README.md  TEST_STRATEGY_ANALYSIS.md  analyze_coverage.py  pyproject.toml
.moai/docs/: DDD-MATURITY-ASSESSMENT.md  SPEC-ENHANCE-004-implementation-report.md  phase4-context-optimization-implementation.md
.moai/plans/: ancient-skipping-lighthouse.md  cozy-soaring-phoenix.md  l1-l8-implementation-fix.md  lexical-stirring-hedgehog.md  velvety-tickling-thompson.md
.moai/project/: product.md  structure.md  tech.md
docs/: environment-variables.md  template-consistency-analysis.md  template-reproducibility-report.md
docs/plans/: 2026-02-15-multi-ai-pipeline-bizplan-design.md
docs/validation-results/: full_pipeline_validation_report.md  validation_results.json
output/0af92048-fba8-4d56-9cd5-2b9f622bbf15/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/3c3cae9e-2deb-4cef-8492-23e059e122f7/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/9fa4c552-61e9-4d23-8799-ebbb3ccca645/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/ab083afa-e9bd-4e9a-9a8e-21e48574a187/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/b385ec7b-4ecb-4927-903d-24ff1a17cd2e/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/b6ef6fdc-7c1d-4a59-a4fd-f6b4aa2f620c/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/c5ae3c6f-33b5-467d-b6e0-9f7b482d2a0b/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
output/ffde145c-87ac-462c-824a-ce8142c60652/: phase1_results.json  phase2_results.json  phase3_results.json  phase4_results.json  phase5_results.json  pipeline_state.json
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  chatgpt_agent.py  claude_agent.py  gemini_agent.py  perplexity_agent.py  router.py
src/aigenflow/: __init__.py  __main__.py  main.py
src/batch/: __init__.py  processor.py  queue.py
src/cache/: __init__.py  key_generator.py  manager.py  storage.py
src/cli/: __init__.py  cache.py  check.py  config.py  relogin.py  resume.py  run.py  setup.py  stats.py  status.py
src/config/: __init__.py  logging_profiles.py
src/context/: __init__.py  summarizer.py  tokenizer.py
src/core/: __init__.py  config.py  events.py  exceptions.py  logger.py  models.py
src/gateway/: base.py  browser_manager.py  browser_pool.py  chatgpt_provider.py  claude_provider.py  cookie_encryption.py  cookie_storage.py  gemini_provider.py  (+5 more)
tests/: __init__.py  poc_playwright.py  test_actual_ai_reproducibility.py  test_ai_reproducibility.py  test_chatgpt.py  test_claude_auth_fix.py  test_claude_auth_fix_auto.py  test_claude_simple.py  test_cli_logging_integration.py  test_config.py  test_full_pipeline.py  test_full_pipeline_validation.py  test_gemini_fixed.py  test_gemini_perplexity.py  test_gemini_perplexity_only.py  test_inspect_ai_dom.py  test_integration_full.py  test_main.py  test_quick_ai_connection.py  test_real_ai_reproducibility.py  test_reproducibility.py  test_reproducibility_simple.py  test_simple_ai_reproducibility.py  test_template_files.py  test_templates_simple.py  test_templates_unit.py
(+106 files in other folders)
