[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigenflow"
version = "0.1.0"
description = "Multi-AI Pipeline CLI Tool for Automated Business Plan Generation"
authors = [
    {name = "drake", email = "drake@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "playwright>=1.49.0",
    "typer>=0.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/aigenflow",
    "src/agents",
    "src/cli",
    "src/core",
    "src/gateway",
    "src/pipeline",
    "src/output",
    "src/templates",
    "src/cache",
    "src/config",
    "src/context",
    "src/monitoring",
    "src/resilience",
    "src/batch",
    "src/ui",
]

[project.urls]
Homepage = "https://github.com/holee9/aigenflow"
Repository = "https://github.com/holee9/aigenflow.git"
Issues = "https://github.com/holee9/aigenflow/issues"

[project.scripts]
aigenflow = "aigenflow.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests that may require external resources",
    "integration: Integration tests that span multiple components",
    "unit: Unit tests for individual functions and classes",
    "slow: Tests that take longer than 1 second to run",
]
